# cubix_data_engineer_capstone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml
final_output/: _committed_6060050354229547769  _committed_8304782502074959068  part-00000-tid-6060050354229547769-8c22bcc7-d835-4a5e-a6ce-998650c2f197-832-1.c000.snappy.parquet
src/cubix_data_engineer_capstone/: test.py
src/cubix_data_engineer_capstone/etl/bronze/: extract_and_load_file.py
src/cubix_data_engineer_capstone/etl/gold/: daily_product_category_metrics.py  daily_sales_metrics.py  wide_sales.py
src/cubix_data_engineer_capstone/etl/silver/: calendar.py  customers.py  product_category.py  product_subcategory.py  products.py  sales.py  scd.py
src/cubix_data_engineer_capstone/utils/: databricks.py
tests/: conftest.py
tests/etl/gold/: test_daily_product_category_metrics.py  test_daily_sales_metrics.py  test_wide_sales.py
tests/etl/silver/: test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_products.py  test_sales.py
