[project]
name = "cubix-data-engineer-capstone"
version = "0.1.0"
description = ""
authors = [
    {name = "zshadady",email = "zsombor.hadady@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "cubix_data_engineer_capstone", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
