[project]
name = "cubix-data-engineer-capstone"
version = "0.1.7"
description = ""
authors = [
    {name = "zshadady",email = "zsombor.hadady@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=4.1.0,<5.0.0)",
    "numpy (>=1,<2)"
]

[project.optional-dependencies]
delta = ["delta-spark>=3.3.0"]

[tool.poetry]
packages = [{include = "cubix_data_engineer_capstone", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["./tests"]
filterwarings = ["ignore:DeprecationWarning"]
addopts = "--disable-warnings -p no:warnings"

[dependency-groups]
dev = [
    "pytest (>8.3.3,<8.3.5)",
    "pyarrow (>=19.0.0,<19.0.1)",
    "pre-commit (>=4.0.1,<4.0.2)",
    "pandas (>=2.2.3,<2.2.4)"
]
